--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,1 +1,5 @@
 <h1>About Meadowlark Travel</h1>
+{{#if fortune}}
+    <p>Your fortunr fo the day:</p>
+    <blockquote>{{fortune}}</blockquote>
+{{/if}}
