--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="/public/img/ford.jpg" alt="Meadowlark Travel Logo">
     {{{body}}}
 </body>
 </html>
